--- a/public/less/style.less
+++ b/public/less/style.less
@@ -1,12 +1,16 @@
 .audiojs {
-    width: 36px;
-    border-radius: 18px;
+    width: 35px;
+    border-radius: 25px;
 }
 
-a#navplayer {
+#main-nav a#navplayer {
     padding: 7px;
 }
 
+#main-nav a#navplayer > i, #main-nav a#navplayer > span {
+    display: none;
+}
+
 a .audiojs > .play-pause {
-    width: 36px;
+    width: 35px;
 }
